add header with links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+    <%= render 'header' %>
     <p id="notice" class="notice"><%= notice %></p>
     <p id="alert" class="alert"><%= alert %></p>
     <%= yield %>
