show helper for buttons

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,5 +12,5 @@
   <%= @post.user.name %>
 </p>
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
+<%= show_edit_button(@post) %> |
 <%= link_to 'Back', posts_path %>
