--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,9 +15,7 @@
         <td><%= post.ime %></td>
         <td><%= post.opis %></td>
         <td><%= post.user.name %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <%= show_post_buttons(post) %>
       </tr>
     <% end %>
   </tbody>
