Fix validation, fields and dependents

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="field">
     <%= form.label :opis %>
-    <%= form.text_field :opis %>
+    <%= form.text_area :opis %>
   </div>
 
   <div class="actions">
