--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="field">
     <%= form.label :opis %>
-    <%= form.text_area :opis %>
+    <%= form.text_area :opis, rows: 5, cols: 60, required: true %>
   </div>
 
   <div class="actions">
