add notice and alert helper

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,10 @@
 
   <body>
     <%= render 'layouts/header' %>
-    <p id="notice" class="notice"><%= notice %></p>
-    <p id="alert" class="alert"><%= alert %></p>
+
+    <%= show_notice %>
+    <%= show_alert %>
+
     <%= yield %>
   </body>
 </html>
